--- a/src/ui/delete_profile_confirmation.ui
+++ b/src/ui/delete_profile_confirmation.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Confirm permanent profile deletion</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout_main">
    <item row="0" column="0" colspan="3">
     <widget class="QLabel" name="label">
      <property name="sizePolicy">
@@ -48,23 +48,6 @@ If you are, please type in the profile name as a confirmation:</string>
      </property>
     </spacer>
    </item>
-   <item row="3" column="2">
-    <widget class="QPushButton" name="delete_button">
-     <property name="text">
-      <string>Delete</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="cancel_button">
-     <property name="text">
-      <string>Cancel</string>
-     </property>
-     <property name="default">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0">
     <spacer name="horizontalSpacer">
      <property name="orientation">
@@ -77,6 +60,23 @@ If you are, please type in the profile name as a confirmation:</string>
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="cancel_button">
+     <property name="text">
+      <string>Cancel</string>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QPushButton" name="delete_button">
+     <property name="text">
+      <string>Delete</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
