Revert "Standarize UI files"
This reverts commit 87482f4174c2fd702a82a25ff5f5bef129af1b36.

Revert "Revert "Standarize UI files""

This reverts commit 3af3a61a6879c5a8fe98f3009353eba05deaf2a7.

Revert "Standarize UI files"

This reverts commit 739def4d66edff362a4a181f0ac215540e288385.

Revert "Standarize UI files"

This reverts commit f7b3b55e4655cc1b26d464c70c7efa282563a7ec.

Revert "Standarize UI files"

This reverts commit dc4b8f4c0ee511c65ce95ed0a7e9dbdea3cd6778.

Revert "Standarize UI files"

This reverts commit 567b5f04e2e76e24a699bfca3a5a9c114d64b444.

Revert "Standarize UI files"

This reverts commit b2baaf62b7e575e045f1d38a414d25019619471c.

Revert "Standarize UI files"

This reverts commit eae28394fbeb39f22b920431ef3bcff1fa6e511b.

Revert "Standarize UI files"

This reverts commit 0df7438124e2991a9623e296d50bc89bd9893ed0.

--- a/src/ui/system_message_area.ui
+++ b/src/ui/system_message_area.ui
@@ -250,14 +250,7 @@ background-color: rgb(255, 254, 215);
            </property>
            <property name="icon">
             <iconset resource="../mudlet.qrc">
-             <normaloff>:/icons/application-exit.png</normaloff>:/icons/application-exit.png
-            
-            
-            
-            
-            
-            
-            </iconset>
+             <normaloff>:/icons/application-exit.png</normaloff>:/icons/application-exit.png</iconset>
            </property>
            <property name="autoRaise">
             <bool>true</bool>
