--- a/src/ui/color_trigger.ui
+++ b/src/ui/color_trigger.ui
@@ -18,14 +18,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../mudlet.qrc">
-    <normaloff>:/icons/mudlet_color.png</normaloff>:/icons/mudlet_color.png
-   
-   
-   
-   
-   
-   
-   </iconset>
+    <normaloff>:/icons/mudlet_color.png</normaloff>:/icons/mudlet_color.png</iconset>
   </property>
   <property name="modal">
    <bool>true</bool>
