--- a/src/ui/custom_lines.ui
+++ b/src/ui/custom_lines.ui
@@ -15,10 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../mudlet.qrc">
-    <normaloff>:/icons/mudlet_custom_exit.png</normaloff>:/icons/mudlet_custom_exit.png
-   
-   
-   </iconset>
+    <normaloff>:/icons/mudlet_custom_exit.png</normaloff>:/icons/mudlet_custom_exit.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="0">
@@ -66,6 +63,41 @@
          <string>Line Settings:</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_style">
+         <item row="0" column="3">
+          <spacer name="horizontalSpacer_intra_normalExits">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>80</width>
+             <height>22</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="8">
+          <widget class="QCheckBox" name="arrow">
+           <property name="minimumSize">
+            <size>
+             <width>160</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="sizeIncrement">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="layoutDirection">
+            <enum>Qt::RightToLeft</enum>
+           </property>
+           <property name="text">
+            <string>Ends with an arrow:</string>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_2">
            <property name="minimumSize">
@@ -81,32 +113,6 @@
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
            </property>
           </widget>
-         </item>
-         <item row="0" column="1" colspan="2">
-          <widget class="QComboBox" name="lineStyle">
-           <property name="minimumSize">
-            <size>
-             <width>80</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="cursor">
-            <cursorShape>PointingHandCursor</cursorShape>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="3">
-          <spacer name="horizontalSpacer_intra_normalExits">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>80</width>
-             <height>22</height>
-            </size>
-           </property>
-          </spacer>
          </item>
          <item row="0" column="4">
           <widget class="QLabel" name="label_3">
@@ -140,6 +146,19 @@
            </property>
           </widget>
          </item>
+         <item row="0" column="1" colspan="2">
+          <widget class="QComboBox" name="lineStyle">
+           <property name="minimumSize">
+            <size>
+             <width>80</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="7">
           <spacer name="horizontalSpacer_intra_normalExits_4">
            <property name="orientation">
@@ -152,28 +171,6 @@
             </size>
            </property>
           </spacer>
-         </item>
-         <item row="0" column="8">
-          <widget class="QCheckBox" name="arrow">
-           <property name="minimumSize">
-            <size>
-             <width>160</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="sizeIncrement">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="layoutDirection">
-            <enum>Qt::RightToLeft</enum>
-           </property>
-           <property name="text">
-            <string>Ends with an arrow:</string>
-           </property>
-          </widget>
          </item>
         </layout>
        </widget>
