--- a/src/ui/custom_lines_properties.ui
+++ b/src/ui/custom_lines_properties.ui
@@ -28,10 +28,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../mudlet.qrc">
-    <normaloff>:/icons/mudlet_custom_exit_properties.png</normaloff>:/icons/mudlet_custom_exit_properties.png
-   
-   
-   </iconset>
+    <normaloff>:/icons/mudlet_custom_exit_properties.png</normaloff>:/icons/mudlet_custom_exit_properties.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
