--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -600,38 +600,20 @@
           <item row="5" column="0">
            <widget class="QLabel" name="label_commandLineHistorySaveSize">
             <property name="text">
-             <string>Command line history to save:</string>
+             <string>Number of lines of command line history to save:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
             <property name="buddy">
-             <cstring>spinBox_commandLineHistorySaveSize</cstring>
+             <cstring>comboBox_commandLineHistorySaveSize</cstring>
             </property>
            </widget>
           </item>
           <item row="5" column="1" alignment="Qt::AlignLeft">
-           <widget class="QSpinBox" name="spinBox_commandLineHistorySaveSize">
+           <widget class="QComboBox" name="comboBox_commandLineHistorySaveSize">
             <property name="toolTip">
              <string>&lt;p&gt;Sets the maximum number of the most recent entries used in each separate command line that are now stored between sessions.&lt;/p&gt;&lt;p&gt;&lt;i&gt;This limit is only applied when the data is stored at the end of a session; whilst a profile is active the command history is unlimited with any reused entries returned to the front of the list.&lt;/i&gt;&lt;/p&gt;</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-            <property name="specialValueText">
-             <string comment="The special value shown when zero lines of the command line history are to be saved at the end of a session.">None</string>
-            </property>
-            <property name="minimum">
-             <number>0</number>
-            </property>
-            <property name="maximum">
-             <number>500</number>
-            </property>
-            <property name="singleStep">
-             <number>10</number>
-            </property>
-            <property name="value">
-             <number>50</number>
             </property>
            </widget>
           </item>
@@ -4173,7 +4155,7 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>checkBox_highlightHistory</tabstop>
   <tabstop>command_separator_lineedit</tabstop>
   <tabstop>commandLineMinimumHeight</tabstop>
-  <tabstop>spinBox_commandLineHistorySaveSize</tabstop>
+  <tabstop>comboBox_commandLineHistorySaveSize</tabstop>
   <tabstop>checkBox_spellCheck</tabstop>
   <tabstop>dictList</tabstop>
   <tabstop>radioButton_userDictionary_profile</tabstop>
