Fix: work around Discord user-name & discriminator changes
Discord is changing the way that Users are identified (to just lower case
alphanumeric characters and '-' and '.) and removing the *discriminator*.
However the unique user id (a long number) is not changing.

This PR encourages the user to migrate from using the first two to limit
which profile uses which Discord User-account to the latter. It causes
`[ ALERT ] ` messages to be shown on profile startup when the Discord-RPC
library is active and has made contact with the user's Discord application
and either a user specified user name or discriminator is being used to
limit. If they match up to the current Discord account in use the user id
number is shown and the user is requested to note it down and copy it to
the preferences and to then remove the previously entered name and
discriminator. Once this has been done (or if they have not been entered)
when a profile starts up a different message is given:
* an `[ INFO ] ` one that confirms that the Discord_RPC library is
connected and if a user id has been set nothing else, but if not the id is
shown so that it can be used in the future
* an `[ ALERT ] ` one that indicates that the entered id does not match the
one in use and what those numbers are

Once any existing preset user name or discriminator has been removed they
will be removed from the profile storage and the preference form bits for
them hidden and the text/tooltips for the visible id entry modified to
remove details about the older, "deprecated" details.

To enable the appropriate message to be give at the right time the way the
`(bool) Host::mIsProfileLoadingSequence` flag is accessed has been revised
so that it being reset triggers the message AND the `sysLoadEvent` Mudlet
event being raised, the latter is still done in the same point in the
application but it gets moved from the `mudlet` class to a called method in
the `host` class.

For the details of the Discord changes see their blog at:
htt

--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -3000,23 +3000,55 @@ you can use it but there could be issues with aligning columns of text</string>
              <bool>true</bool>
             </property>
             <property name="toolTip">
-             <string>&lt;p&gt;Mudlet will only show Rich Presence information while you use this Discord username (useful if you have multiple Discord accounts). Leave empty to show it for any Discord account you log in to.&lt;/p&gt;</string>
+             <string>&lt;p&gt;Mudlet will only show Rich Presence information while your Discord application reports that you are logged in with these Discord user identification details (useful if you have multiple Discord accounts). Leave empty to show it for any Discord account you log in to.&lt;/p&gt;</string>
             </property>
-            <layout class="QHBoxLayout" name="horizontalLayout_widget_discordUser">
-             <item>
-              <widget class="QLabel" name="label_discordUserName">
+            <layout class="QGridLayout" name="gridLayout_widget_discordUser">
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_discordUserId">
+               <property name="toolTip">
+                <string>&lt;p&gt;&lt;b&gt;&lt;i&gt;(Preferred as of May 2023)&lt;/i&gt;&lt;/b&gt; Mudlet will only send Rich Presence information to your local Discord application while you use this Discord user id (useful if you have multiple Discord accounts). Leave empty to allow this profile to send information to any Discord account you log in with.&lt;/p&gt;</string>
+               </property>
                <property name="text">
-                <string>Restrict to:</string>
+                <string comment="Text used for the label to introduce the Discord User Id (&quot;snowflake&quot;) number when there is an obsolete User Name or User Discriminator stored.">(Preferred) Restrict to user id:</string>
+               </property>
+               <property name="buddy">
+                <cstring>lineEdit_discordUserId</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1" colspan="3">
+              <widget class="QLineEdit" name="lineEdit_discordUserId">
+               <property name="toolTip">
+                <string>&lt;p&gt;&lt;b&gt;&lt;i&gt;(Preferred as of May 2023)&lt;/i&gt;&lt;/b&gt; Mudlet will only send Rich Presence information to your local Discord application while you use this Discord user id (useful if you have multiple Discord accounts). Leave empty to allow this profile to send information to any Discord account you log in with.&lt;/p&gt;</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
+               <property name="placeholderText">
+                <string>specific Discord user id</string>
+               </property>
+               <property name="clearButtonEnabled">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_discordUserName">
+               <property name="toolTip">
+                <string>&lt;p&gt;&lt;b&gt;&lt;i&gt;(Depreciated as of May 2023)&lt;/i&gt;&lt;/b&gt; Mudlet will only send Rich Presence information to your local Discord application while you use this Discord user name (useful if you have multiple Discord accounts). Leave empty to allow this profile to send information to any Discord account you log in with.&lt;/p&gt;</string>
+               </property>
+               <property name="text">
+                <string>(Depreciated) Restrict to:</string>
                </property>
                <property name="buddy">
                 <cstring>lineEdit_discordUserName</cstring>
                </property>
               </widget>
              </item>
-             <item>
+             <item row="1" column="1">
               <widget class="QLineEdit" name="lineEdit_discordUserName">
                <property name="toolTip">
-                <string>&lt;p&gt;Mudlet will only show Rich Presence information while you use this Discord username (useful if you have multiple Discord accounts). Leave empty to show it for any Discord account you log in to.&lt;/p&gt;</string>
+                <string>&lt;p&gt;&lt;b&gt;&lt;i&gt;(Depreciated as of May 2023)&lt;/i&gt;&lt;/b&gt; Mudlet will only send Rich Presence information to your local Discord application while you use this Discord user name (useful if you have multiple Discord accounts). Leave empty to allow this profile to send information to any Discord account you log in with.&lt;/p&gt;</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -3029,17 +3061,17 @@ you can use it but there could be issues with aligning columns of text</string>
                </property>
               </widget>
              </item>
-             <item>
+             <item row="1" column="2">
               <widget class="QLabel" name="label_discordUserDiscriminator">
                <property name="toolTip">
-                <string>&lt;p&gt;Mudlet will only show Rich Presence information while you use this Discord username (useful if you have multiple Discord accounts). Leave empty to show it for any Discord account you log in to.&lt;/p&gt;</string>
+                <string>&lt;p&gt;&lt;p&gt;&lt;b&gt;&lt;i&gt;(Depreciated as of May 2023)&lt;/i&gt;&lt;/b&gt; Mudlet will only send Rich Presence information to your local Discord application while you use this Discord username discriminator (useful if you have multiple Discord accounts). Leave empty to allow this profile to send information to any Discord account you log in with.&lt;/p&gt;</string>
                </property>
                <property name="text">
                 <string notr="true"> # </string>
                </property>
               </widget>
              </item>
-             <item>
+             <item row="1" column="3">
               <widget class="QLineEdit" name="lineEdit_discordUserDiscriminator">
                <property name="maximumSize">
                 <size>
@@ -3048,7 +3080,7 @@ you can use it but there could be issues with aligning columns of text</string>
                 </size>
                </property>
                <property name="toolTip">
-                <string>&lt;p&gt;Mudlet will only show Rich Presence information while you use this Discord username (useful if you have multiple Discord accounts). Leave empty to show it for any Discord account you log in to.&lt;/p&gt;</string>
+                <string>&lt;p&gt;&lt;p&gt;&lt;b&gt;&lt;i&gt;(Depreciated as of May 2023)&lt;/i&gt;&lt;/b&gt; Mudlet will only send Rich Presence information to your local Discord application while you use this Discord username discriminator (useful if you have multiple Discord accounts). Leave empty to allow this profile to send information to any Discord account you log in with.&lt;/p&gt;</string>
                </property>
                <property name="inputMethodHints">
                 <set>Qt::ImhDigitsOnly</set>
