--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -13,6 +13,7 @@
         <file>icons/aardwolf_mud.png</file>
         <file>icons/accessories-text-editor.png</file>
         <file>icons/achaea_120_30.png</file>
+        <file>icons/abandonedrealms_icon.jpg</file>
         <file>icons/aetolia_120_30.png</file>
         <file>icons/application-exit.png</file>
         <file>icons/application-json.png</file>
