Add persistent command history (#6767)
#### Brief overview of PR changes/additions
Saves each command line's history when a profile is closed and restores
the data the next time the profile is opened. Each command line is
handled separately.

#### Motivation for adding to Mudlet
It is a bounty item!

#### Other info (issues closed, discussion etc)
This works for command lines of all types, and saves them all separately
in the profile's base directory.

This should close https://github.com/Mudlet/Mudlet/issues/2007.

We'll avoid using the names for the extra command lines as part of a
filename by instead storing them in a `QSettings` per profile
`profile.ini` format file.

Using such a file to store per-profile details is something that has
been on my TODO list for years (I prototyped code to do it at least as
far back as 2016 I think) - so I have added two functions to the Host
class that hopefully can eventually replace the existing
`readProfileData(...)` and `writeProfileData(...)`.

Also added code to fix a corner case where a TCommandLine has a name
containing '/' or '\'.

Also added a limit to the number of command line history entries to
save. Otherwise it will grow indefinitely large as every single entry is
retained. A knob for this has been provided on the profile preferences
and it is saved with the profile's XML game save file (not in the base
directory of the profile). It covers the range of 0 to 10,000 entries
with a default of 500 and a logarithmic step size (1, 2, 5, 10) for each
multiple of 10. This value is applied to ALL command lines in a profile.

Note that this limit is only applied when the commend history is saved,
it can still grow to be larger than the limit whilst the profile is
active!

A pair of lua API  functions are added:
* `setSaveCommandHistory([commandLineName,] save)`  to enable
(`true`) or disable (`false`) the main, or if specified, any other
command-line
* `getSaveCommandHistory([comman

--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -597,6 +597,26 @@
             </property>
            </widget>
           </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="label_commandLineHistorySaveSize">
+            <property name="text">
+             <string>Number of lines of command line history to save:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+            <property name="buddy">
+             <cstring>comboBox_commandLineHistorySaveSize</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1" alignment="Qt::AlignLeft">
+           <widget class="QComboBox" name="comboBox_commandLineHistorySaveSize">
+            <property name="toolTip">
+             <string>&lt;p&gt;Sets the maximum number of the most recent entries used in each separate command line that are now stored between sessions.&lt;/p&gt;&lt;p&gt;&lt;i&gt;This limit is only applied when the data is stored at the end of a session; whilst a profile is active the command history is unlimited with any reused entries returned to the front of the list.&lt;/i&gt;&lt;/p&gt;</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -4135,6 +4155,7 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>checkBox_highlightHistory</tabstop>
   <tabstop>command_separator_lineedit</tabstop>
   <tabstop>commandLineMinimumHeight</tabstop>
+  <tabstop>comboBox_commandLineHistorySaveSize</tabstop>
   <tabstop>checkBox_spellCheck</tabstop>
   <tabstop>dictList</tabstop>
   <tabstop>radioButton_userDictionary_profile</tabstop>
