Revise: remove visible frame around text and ID number
Discovered during peer-review.

Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/src/ui/actions_main_area.ui
+++ b/src/ui/actions_main_area.ui
@@ -76,7 +76,7 @@
       <item>
        <widget class="QFrame" name="frameId">
         <property name="frameShape">
-         <enum>QFrame::Box</enum>
+         <enum>QFrame::NoFrame</enum>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_frameId">
          <property name="leftMargin">
