--- a/src/ui/scripts_main_area.ui
+++ b/src/ui/scripts_main_area.ui
@@ -37,7 +37,7 @@
    <item row="0" column="2" colspan="2">
     <widget class="QFrame" name="frameId">
      <property name="frameShape">
-      <enum>QFrame::Box</enum>
+      <enum>QFrame::NoFrame</enum>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_frameId">
       <property name="leftMargin">
