--- a/src/ui/timers_main_area.ui
+++ b/src/ui/timers_main_area.ui
@@ -43,7 +43,7 @@
    <item row="0" column="10">
     <widget class="QFrame" name="frameId">
      <property name="frameShape">
-      <enum>QFrame::Box</enum>
+      <enum>QFrame::NoFrame</enum>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_frameId">
       <property name="leftMargin">
