--- a/src/ui/aliases_main_area.ui
+++ b/src/ui/aliases_main_area.ui
@@ -28,7 +28,7 @@
     <height>100</height>
    </size>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,0,0,0">
    <item row="0" column="0">
     <widget class="QLabel" name="label_alias_name">
      <property name="text">
@@ -58,6 +58,56 @@
      </property>
     </widget>
    </item>
+   <item row="0" column="4">
+    <widget class="QFrame" name="frameId">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_frameId">
+      <property name="leftMargin">
+       <number>3</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>3</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item alignment="Qt::AlignVCenter">
+       <widget class="QLabel" name="label_idLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>ID:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::NoTextInteraction</set>
+        </property>
+       </widget>
+      </item>
+      <item alignment="Qt::AlignVCenter">
+       <widget class="QLabel" name="label_idNumber">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::TextSelectableByMouse</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_alias_pattern">
      <property name="sizePolicy">
@@ -80,7 +130,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="1" column="1" colspan="2">
     <widget class="QLineEdit" name="lineEdit_alias_pattern">
      <property name="minimumSize">
       <size>
@@ -102,7 +152,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="2" alignment="Qt::AlignRight">
+   <item row="1" column="3">
     <widget class="QLabel" name="label_alias_regex">
      <property name="text">
       <string>Type:</string>
@@ -112,7 +162,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="3">
+   <item row="1" column="4">
     <widget class="QComboBox" name="comboBox_alias_regex">
      <property name="enabled">
       <bool>false</bool>
@@ -151,7 +201,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="3">
+   <item row="2" column="1" colspan="4">
     <widget class="QLineEdit" name="lineEdit_alias_command">
      <property name="minimumSize">
       <size>
