--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -40,6 +40,7 @@
         <file>icons/clessidra.jpg</file>
         <file>icons/cleftofdimensions.png</file>
         <file>icons/configure.png</file>
+        <file>icons/coffeemud_120_30.png</file>
         <file>icons/coremud_icon.jpg</file>
         <file>icons/dash-dot-dot-line.png</file>
         <file>icons/dash-dot-line.png</file>
