Improve: remove speedWalkDir normal exit directions from translation system (#6952)
#### Brief overview of PR changes/additions
This PR removes the (unhelpful) translation to user's locale.

#### Motivation for adding to Mudlet
Whilst describing how the SpeedWalking code operated last night on
Discord in the **#help** channel:

https://www.discord.com/channels/283581582550237184/283582068334526464/1142680496254484561
I realised that we had been passing the normal exit directions through
the translation system for the end-users GUI language. This is wrong
because there is not necessarily a match between the language the
end-user prefers and that used by any MUD they might play. As such it
means that the normal exit "abbreviations" that the speedwalking code
uses to fill in the `speedWalkDir` table change depending on which GUI
language is selected and this means that the "mapper" package for any
MUD has to know that and then translate them to the language that the
MUD uses - as they need not be the same.

#### Other info (issues closed, discussion etc)
Examining the various `translations/translated/mudlet_xx_YY.ts` files I
have determined that this bogus translation in the user's GUI language
happens for the following language/country codes (the code that is used
for the others and for all cases when this PR is place without the bogus
translation being done AND the "direction codes" also used within the
Lua sub-system are also shown):

|code|Language
(Country)|North|North-east|North-west|East|West|South|South-east|South-west|Up|Down|In|out|
|-|-|-|-|-|-|-|-|-|-|-|-|-|-|
||Direction code|`1`|`2`|`3`|`4`|`5`|`6`|`7`|`8`|`9`|`10`|`11`|`12`|
||All others (or after this
PR)|`n`|`ne`|`nw`|`e`|`w`|`s`|`se`|`sw`|`up`|`down`|`in`|`out`|
|ar_SA|Arabic (Saudi
Arabia)|`n`(?)|`ne`(?)|`nw`(?)|`e`(?)|`ص`|`s`(?)|`se`(?)|`sw`(?)|`فوق`|`تحت`|`للداخل`|`للخارج`
|de_DE|German
(Germany)|`n`|`no`|`nw`|`o`|`w`|`s`|`so`|`sw`|`oben`|`unten`|`rein`|`raus`|
|

--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -3638,7 +3638,7 @@ you can use it but there could be issues with aligning columns of text</string>
          <property name="title">
           <string>Accessibility</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout">
+         <layout class="QGridLayout" name="gridLayout_groupBox_accessibility">
           <item row="0" column="0" colspan="2">
            <widget class="QCheckBox" name="checkBox_announceIncomingText">
             <property name="toolTip">
@@ -4026,7 +4026,7 @@ you can use it but there could be issues with aligning columns of text</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="1">
+          <item row="5" column="1">
            <widget class="QDoubleSpinBox" name="doubleSpinBox_networkPacketTimeout">
             <property name="toolTip">
              <string>&lt;p&gt;&lt;i&gt;Go-Ahead&lt;/i&gt; (&lt;tt&gt;GA&lt;/tt&gt;) and &lt;i&gt;End-of-record&lt;/i&gt; (&lt;tt&gt;EOR&lt;/tt&gt;) signalling tells Mudlet when the game server is done sending text. On games that do not provide &lt;tt&gt;GA&lt;/tt&gt; or &lt;tt&gt;EOR&lt;/tt&gt;, this option controls how long Mudlet will wait for more text to arrive. Greater values will help reduce the risk that Mudlet will split a large piece of text (with unintended line-breaks in the middle) which can stop some triggers from working. Lesser values increases the risk of text getting broken up, but may make the game feel more responsive.&lt;/p&gt;&lt;p&gt;&lt;i&gt;The default value, which was what Mudlet used before this control was added, is 0.300 Seconds.&lt;/i&gt;&lt;/p&gt;</string>
